--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Shantell Sans', cursive;
+    color: #fff;
+}
+
 .container {
-    width: 500px;
-    height: 100vh;
+    min-height: 550px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,12 +18,23 @@
     margin: 0 auto;
 }
 
+.city {
+    margin-top: 45px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    padding: 10px
+}
+
 .weather__app {
     min-height: 500px;
-    max-width: 300px;
+    width: 394px;
     /* border: 1px solid black; */
     padding: 10px;
-    background-color: rgb(77, 93, 243);
+    background: rgb(77, 93, 243);
+    background-color: #3b5cec;
+    background-image: linear-gradient(0deg, #b7bfe2 0%, #40acbe 100%);
+    border-radius: 5px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .weahter__condition-now {
@@ -25,7 +46,7 @@
 
 .weather__forecast-now {
     display: flex;
-    gap: 14px;
+    gap: 20px;
 }
 
 .temp__now-degrs {
@@ -33,15 +54,21 @@
     margin-top: 10px;
     font-size: 45px;
     color: #ffff;
+    position: relative;
 }
 
-.temp__now-degrs {
-    margin-bottom: 20px;
+.temp__now-degrs::after {
+    content: '°';
+    position: absolute;
+    bottom: 13%;
+    left: 126%;
+    font-size: 29px;
+    transform: translate(-50%, -50%);
 }
 
-.weather__condition-now {}
-
-.wth__cond--nowImage {}
+.weather__condition-image {
+    margin-left: 10px;
+}
 
 .search__city {
     display: flex;
@@ -59,19 +86,45 @@
     border: none;
     outline: none;
     text-align: center;
+    width: 180px;
+    color: black;
+    margin-top: 14px;
 }
 
 .search__input::placeholder {
     text-align: center;
     font-size: 17px;
+    color: black;
+}
+
+.search_x::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 0;
+    width: 0;
+    padding: 0;
+    margin: 0;
+    border: none;
 }
 
 .btn {
-    width: 20%;
-    margin: 0 auto;
+    padding: 5px;
+    width: 50px;
+    margin-top: 3px;
+    font-size: 15px;
+    padding: 5px;
+    background-color: rgb(243, 239, 9);
+    outline: 0;
+    border-radius: 28% 72% 62% 38% / 30% 31% 69% 70%;
+    border: none;
+    color: #ffff;
+    cursor: pointer;
+    margin-top: 20px;
+    color: #63b2c8;
+    font-weight: 700;
 }
 
 .date {
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,8 +145,9 @@
 
 .slider {
     display: flex;
-    width: 100%;
+    width: 70%;
     overflow-x: auto;
+    margin: 0 auto;
 }
 
 .weather__condition {
@@ -102,11 +156,22 @@
     /* or any other width you want each element to have */
     margin-right: 10px;
     margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 22px;
 }
 
-.temp__degrs {}
+.temp__degrs {
+    padding-top: 14px;
+    position: relative;
+}
 
-.degrs {}
+.degrs {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 29px;
+    /* transform: translate(-50%, -50%); */
+}
 
 .time {}
 
