--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .weather__app {
-    min-height: 500px;
+    height: 100vh;
     width: 394px;
     /* border: 1px solid black; */
     padding: 10px;
