--- a/style.css
+++ b/style.css
@@ -9,13 +9,21 @@
     color: #fff;
 }
 
+body {
+    background: url('images/64x64/day/sam-schooler-E9aetBe2w40-unsplash.jpg');
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
 .container {
     height: 700px;
     display: flex;
     align-items: center;
     justify-content: center;
     /* border: 1px solid red; */
-    margin: 0 auto;
+    margin: 35px auto;
 }
 
 .city {
@@ -26,15 +34,17 @@
 }
 
 .weather__app {
-    height: 700px;
+    min-height: 700px;
     width: 394px;
     /* border: 1px solid black; */
-    padding: 10px;
+    padding: 7px;
     background: rgb(77, 93, 243);
     background-color: #3b5cec;
-    background-image: linear-gradient(0deg, #b7bfe2 0%, #40acbe 100%);
+    background-image: linear-gradient(0deg, #202c60 0%, #40acbe 100%);
     border-radius: 5px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    padding-bottom: 40px;
+    margin-top: 50px;
 }
 
 .weahter__condition-now {
@@ -71,32 +81,51 @@
     margin-left: 10px;
 }
 
+
+/* Style the container element */
+
 .search__city {
-    display: flex;
-    /* border: 1px solid black; */
-    flex-direction: column;
-    gap: 5px;
-    align-items: center;
-    justify-content: center;
-    padding: 5px;
+    position: relative;
+    display: inline-block;
+    margin: 20px;
 }
+
+
+/* Style the search input */
 
 .search__input {
-    padding: 6px;
-    border-radius: 5px;
+    padding: 10px 20px;
     border: none;
-    outline: none;
-    text-align: center;
-    width: 180px;
-    color: black;
-    margin-top: 14px;
-    margin-bottom: 20px;
+    border-radius: 30px;
+    font-size: 17px;
+    width: 286px;
+    background-color: #f8f8f8;
+    transition: all 0.3s cubic-bezier(0.42, 0, 0.51, 0.57);
+    color: #5063b6
 }
 
+
+/* Style the search icon */
+
 .search__input::placeholder {
-    text-align: center;
-    font-size: 17px;
-    color: black;
+    color: #aaa;
+    font-weight: bold;
+}
+
+
+/* Style the input on focus */
+
+.search__input:focus {
+    outline: none;
+    background-color: #fffafa;
+    box-shadow: 0px 0px 10px 0px rgba(0, 123, 255, 0.2);
+}
+
+
+/* Style the search icon on hover */
+
+.search__input:hover {
+    background-color: #f0f0f0;
 }
 
 .search_x::-webkit-search-cancel-button {
@@ -125,17 +154,22 @@
 }
 
 .date {
-    margin-top: 30px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 40px;
+    gap: 20px;
     /* border: 1px solid red; */
 }
 
 .today__date {
     color: #fff;
     font-size: 24px;
+}
+
+.today__time {
+    font-size: 21px;
+    color: #efff00;
 }
 
 .slide__container {
@@ -152,13 +186,18 @@
 }
 
 .weather__condition {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     flex: 0 0 auto;
-    width: 80px;
-    /* or any other width you want each element to have */
-    margin-right: 10px;
+    width: 53px;
+    margin-right: 22px;
     margin-bottom: 20px;
     margin-top: 20px;
     font-size: 22px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 13px;
 }
 
 .temp__degrs {
