--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ body {
 }
 #time__date::before {
     /* display: block; */
-    content: url('/images/211606_clock_icon.svg');
+    content: url('images/64x64/day/clock.svg');
     padding: 5px;
 }
 
