--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
                             letter-spacing: 1.5px;
                             padding: 10px
                         }
-                        .weather__app {
-                            min-height: 700px;
+        .weather__app {
+                            height: 100vh;
                             width: 394px;
                             /* border: 1px solid black; */
                             padding: 7px;
