--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     background-repeat: no-repeat;
 }
 
-.city {
+#city {
     text-transform: uppercase;
     letter-spacing: 1.5px;
     margin-top: 30px
