--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@
             gap: 16px;
             flex: 0 0 auto;
             width: 70px;
-            margin-right: 22px;
+/*             margin-right: 22px; */
             margin-bottom: 20px;
             margin-top: 20px;
             font-size: 22px;
